# data_science

./: .gitignore  README.md  pyproject.toml
Bayesian Optimisation/: test.ipynb
Concepts/1. Importance Sampling/: importance_sampling.ipynb
Concepts/Bit Manipulation Tricks/: bit_manipulation_tricks.ipynb  math_operations_with_binary.ipynb
Cool Stuff/Reservoir Sampling/: reservoir_sampling.ipynb
Games/: snakes_and_ladders.ipynb
Machine Learning Algorithms Implementation/: README.md
Machine Learning Algorithms Implementation/Distance Measures/: jensen_shannon_divergence.ipynb  kl_divergence.ipynb  mutual_information.ipynb  shannon_entropy.ipynb
Machine Learning Algorithms Implementation/Isotonic Regression/: notes.ipynb
Machine Learning Algorithms Implementation/Likelihood/: TODO  probability_vs_likelihood.ipynb
Machine Learning Algorithms Implementation/Neural Networks/: backprop.ipynb
Machine Learning Algorithms Implementation/OLS/: 1. OLS Basics.ipynb  2. Summary Table: Degrees of Freedom.ipynb  4. Summary Table: F-Stat.ipynb  5. Summary Table: Log-Likelihood, AIC, BIC.ipynb  5. Summary Table: Log-Likelihood.ipynb  6. Summary Table: Standard Error of Coefficients.ipynb
Machine Learning Algorithms Implementation/Quantile Regression/: notes.ipynb
Machine Learning Algorithms Implementation/Reinforcement Learning/: 1. RL Foundations.ipynb  2. Markov Decision Process.ipynb  3. Bellman Equation.ipynb  4. Approaches to Solve the Bellman Equation.ipynb  4a. Dynamic Programming.ipynb  4b. Monte Carlo.ipynb  4c. TD Learning.ipynb  (+3 more)
Tooling/: README.md
(+63 files in other folders)
