[tool.poetry]
name = "data-science"
version = "0.1.0"
description = ""
authors = ["yongjian.tek <yongjian.tek@grabtaxi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"
statsmodels = "^0.14.4"
openml = "^0.15.0"
plotly = "^5.24.1"
numpy = "^2.1.2"
lightgbm = "^4.5.0"
xgboost = "^2.1.1"
nonconformist = "^2.1.0"
dtype-diet = "^0.0.2"
mapie = "^0.9.1"
crepes = "^0.7.1"
yellowbrick = "^1.5"
setuptools = "^75.1.0"
scikit-optimize = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
