[project]
name = "data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hyperopt>=0.2.7",
    "ipykernel>=6.29.5",
    "keras>=3.7.0",
    "mlflow>=2.19.0",
    "numpy==2.0.2",
    "tensorflow==2.18.0",
    "virtualenv>=20.28.0",
]
