[project]
name = "data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hyperopt>=0.2.7",
    "ipykernel>=7.1.0",
    "keras>=3.11.3",
    "mlflow>=3.5.1",
    "numpy>=2.3.4",
    "tensorflow>=2.20.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
]